tests/ui/error-codes/E0505.stderr
error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/E0505.rs:9:13
   |
LL |     let x = Value{};
   |         - binding `x` declared here
LL |     {
LL |         let _ref_to_val: &Value = &x;
   |                                   -- borrow of `x` occurs here
LL |         eat(x);
   |             ^ move out of `x` occurs here
LL |         _ref_to_val.use_ref();
   |         ----------- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0505`.
